# courtcorrect-interview

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: main.yaml
backend/: .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/app/: __init__.py  conftest.py  main.py
backend/app/categories/: factories.py  fixtures.py  models.py  routers.py  tests.py
backend/app/companies/: factories.py  fixtures.py  models.py  routers.py  tests.py
backend/app/core/: database.py  factories.py  models.py  schemas.py  settings.py
backend/app/core/utils/: discover_models.py  psqldbcleaner.py
backend/app/decisions/: factories.py  fixtures.py  models.py  routers.py  tests.py
backend/app/regulations/: factories.py  filters.py  fixtures.py  models.py  routers.py  schemas.py  tests.py
backend/app/status/: routers.py  tests.py
backend/db/: env.py
backend/db/versions/: 2023-12-01_6c3f7bb87c83_add_citext.py  2024-02-12_b75caf89809d_add_models.py
backend/scripts/: gen_openapi.py  populate_db.py
data/ci/add-ci/: coverage.xml
data/ci/fix-diff-branch/: coverage.xml
data/feat/store-query-params-to-url/: coverage.xml
data/fix/ignore-missed-preview-module/: coverage.xml
data/main/: coverage.xml
frontend/: .dockerignore  .eslintignore  .eslintrc  .gitignore  Dockerfile  Makefile  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/api/: README.md
frontend/src/api/queries/: index.ts
frontend/src/api/requests/: index.ts
frontend/src/api/requests/models/: ListResponse_NamedModelSchema_.ts  NamedModelSchema.ts  Page_RegulatorySchema_.ts  RegulatorySchema.ts
frontend/src/api/requests/schemas/: $ListResponse_NamedModelSchema_.ts  $NamedModelSchema.ts  $Page_RegulatorySchema_.ts  $RegulatorySchema.ts
frontend/src/api/requests/services/: CategoriesService.ts  CompaniesService.ts  DecisionsService.ts  RegulationsService.ts  StatusService.ts
frontend/src/api/tools/: MapApiErrorsToForm.tsx
frontend/src/components/: Loading.tsx  Main.tsx
frontend/src/components/Footer/: index.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/Sidebar/: index.tsx
frontend/src/dev/: .gitignore  index.ts  palette.tsx  useInitial.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/QuickSearch/: index.tsx
frontend/src/pages/QuickSearch/components/: FiltersRow.tsx  PaginationHeader.tsx  ResultItem.tsx  Results.tsx  SearchRow.tsx
frontend/src/routes/: index.tsx  paths.ts
frontend/src/theme/: index.tsx
frontend/src/types/: vanta.d.ts
